<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Camera_header">

        <SwitchPreferenceCompat
            app:key="continuous"
            app:title="@string/continuous_scan"/>
        <SwitchPreferenceCompat
            app:key="beep"
            android:defaultValue="true"
            app:title="@string/beep" />
        <SwitchPreferenceCompat
            app:key="enable_viewfinder"
            app:title="@string/enable_viewfinder"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/History_header">

        <SwitchPreferenceCompat
            app:key="record_history"
            app:title="@string/record_history"/>
        <SwitchPreferenceCompat
            app:key="save_image"
            app:title="@string/save_image"/>

    </PreferenceCategory>

</PreferenceScreen>